# Kestrel

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bins.json  kestrel.py  requirements.txt  run.sh  test_kestrel.py  verify.sh
anomalies/: README.md  check_iperf3.sh  config.py  orchestrate_congestion.py  orchestrate_contention.py  orchestrate_microburst.py  orchestrate_policy_abuse.py
anomaly_injector/: README.md  build.sh  deploy.sh  go.mod  go.sum  inject_congestion.go  inject_microburst.go  inject_policy_abuse.go
bundles/: bundle.json  xgb.json
data/cms/: window_1.parquet  window_10.parquet  (+598 more)
telemetry_collector/: CMakeLists.txt  README.md  build.sh  deploy.sh  deploy_and_test.sh
tofino/: build.sh  deploy.sh  run_switchd.sh
tofino/p4src/: CMakeLists.txt  README.md  kestrel.p4
tofino/p4src/includes/: checksum.p4  defines.p4  dmac.p4  forward.p4  headers.p4  int.p4  meter.p4  parser.p4  queue.p4  util.p4
tofino_controller/: README.md  build.sh  pyproject.toml  remote_setup.sh  requirements.txt
tofino_controller/bfrt/: config.py  connection.py  controller.py  helpers.py  logging.py
tofino_controller/bfrt/recipes/: __init__.py  mirror.py  multicast.py  ports.py  registers.py
tofino_controller/configs/: default.yaml
tofino_controller/examples/: connection.py  metering.py  policing.py  ports_up.py  queueing.py  registers.py  scheduling.py  setup.py  telemetry.py
traffic_generator/: README.md  build.sh  config.json  deploy.sh  deploy_and_test.sh  deploy_monitor.sh  download_dataset.sh  go.mod  go.sum  interface_monitor.sh  traffic_generator.go  trafficd.sh
(+602 files in other folders)
