[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tofino-controller"
dynamic = ["version"]         
requires-python = ">=3.8"
dependencies = [
  "PyYAML>=6.0",
  "grpcio>=1.59.0",
  "googleapis-common-protos>=1.63.0",
  "protobuf==3.20.*",
  "six>=1.16.0",
  "tabulate>=0.9.0",
]

[tool.hatch.version]
path = "bfrt/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["bfrt"]
